[build-system]
requires = ["setuptools>=40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gmx_abstract"
version = "0.1.0"
description = "A python client for polling and fetching actions on the GMX Exchange"
authors = [{ name = "defiants-co", email = "amrith@creda.io" }]
dependencies = [
    "gmx_python_sdk @ git+https://github.com/defiants-co/gmx_python_sdk.git@main"
]

[tool.poetry]
name = "gmx_abstract"
version = "0.01"
description = "A python client for polling and fetching actions on the GMX Exchange"
authors = ["defiants-co"]

[tool.poetry.dependencies]
python = "^3.11"
